# contracts/openapi.json
@@ -4990,6 +4990,16 @@
           },
           "id": {
             "type": "string"
+          },
+          "display": {
+            "oneOf": [
+              {
+                "type": "null"
+              },
+              {
+                "$ref": "#/components/schemas/JsonElement"
+              }
+            ]
           }
         }
       },
